fix list api